--- a/paper/main.tex
+++ b/paper/main.tex
@@ -12,6 +12,7 @@
 \usepackage{lipsum}
 \usepackage{graphicx}       % include pdfs as figures
 \usepackage[ruled]{algorithm2e}
+\usepackage{bm}
 
 \title{\texttt{metabench}\\A Sparse Benchmark to Measure General Ability\\in Large Language Models}
 \author{%
@@ -61,12 +62,21 @@ where $\mu_1$ resp. $\mu$ are the mean scores of the group who answered the item
 For comparability, we conducted a train-test-validation split of the LLMs in the following manner: For stratification, we calculated the grand average (GA) of the original benchmark scores for models that had data for \textit{all six} benchmarks, and used it to split off $10\%$ of the LLMs for validation.For cross-validation per benchmark, we split off further $10\%$ of the remaining LLMs for testing, this time stratifying by the specific benchmark score. 
 
 \subsection{Evolutionary Subsampling}
-After preprocessing, \texttt{HellaSwag} and \texttt{MMLU} still had substantially more items than LLMs, prohibiting the use of IRT models.To further reduce their number of items to $1/4$ of the respectively available LLMs, we used an evolutionary subsampling approach:
+After preprocessing, \texttt{HellaSwag} and \texttt{MMLU} still had substantially more items than LLMs, prohibiting the use of IRT models. To further reduce their number of items to $1/4$ of the respectively available LLMs, we used an evolutionary subsampling approach:
 \begin{enumerate}
    \item Randomly drop $k$ items from the benchmark.
-   \item Re-calculate the mean score of the remaining items for each LLM.
-   \item Use the training subset to fit a non-linear regression model
+   \item Re-calculate the mean score $\dot {\boldsymbol{\mu}}$ of the remaining items for each LLM.
+   \item Fit a non-linear regression model on the training set: $\boldsymbol\mu = f(\dot{\boldsymbol\mu})$ 
+   \item Calculate the root mean square error (RMSE) on the test subset.
 \end{enumerate}
+This inner loop is repeated $50$ times, and the iteration with the lowest RMSE makes the cut. The outer loop is repeated until the number of items reaches the goal size. The final set of items is also tested on the validation set. For \texttt{MMLU}, the procedure uses a linear model of all scenario scores to predict the total score, but is otherwise identical.
+Using this procedure, we reduced the number of items in \texttt{HellaSwag} from $10042$ to $1181$ and in \texttt{MMLU} from $14042$ to $1108$ with minimal loss in predictive performance on the validation set.
+\begin{figure}[h]
+   \centering
+   \includegraphics[width=0.8\textwidth]{figures/hellaswag-reduced.png}
+   \caption{}
+   \label{fig:hs-reduced}
+\end{figure}
 
 % begin algorithm
 % \begin{algorithm}
